[package]
name = "transaction_decoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
hex = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"]}
serde_json = "1.0"
derive_more = "0.99"
bytes = "1.2.1"
thiserror = "1.0.31"
anyhow = "1.0.59"
ethabi = "17.1.0"